# mkhuda-blog-llm-rag

./: .dockerignore  .env-sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  rag_build.py  rag_chat.py  rag_chroma_builder.py  rag_faiss_builder.py  rag_fastapi.py  rag_gradio.py  rag_pre_reasoning.py  requirements.txt  requirements_chroma.txt  requirements_uv.txt
app/: rag_build_scheduler.py  rag_chroma_chat.py  rag_faiss_chat.py  rag_fastapi.py  rag_gradio.py  rag_gradio_chroma.py  widget.html
builder/: rag_build.py  rag_build_llama.py  rag_chroma_builder.py  rag_faiss_builder.py
mkhuda_faiss_index/: index.faiss  index.pkl
utils/: inspect_faiss.py  pydantic_langchain_fix.py  rag_chroma_filtering.py  rag_pre_reasoning.py  rag_pre_reasoning2.py  rag_prompts.py
